src/objects/Project_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Active_Inactive__c</fullName>
        <label>Active/Inactive</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Area_value__c</fullName>
        <label>Actual Area value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advance_Registration_Reference_No__c</fullName>
        <label>Advance Registration Reference No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alottment_Letter_date__c</fullName>
        <label>Alottment Letter date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Type</label>
        <referenceTo>Area_Type__c</referenceTo>
        <relationshipLabel>Project_Units</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balcony_Carpet_Area__c</fullName>
        <label>Balcony Carpet Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balcony__c</fullName>
        <label>Balcony</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Id__c</fullName>
        <label>Bank Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <formula>Bank__r.Bank_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Bank__c</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bedroom_Flooring__c</fullName>
        <label>Bedroom Flooring</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrokeragePer__c</fullName>
        <label>BrokeragePer</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrokerageRate__c</fullName>
        <label>Brokerage Rate</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Parking_Charge__c</fullName>
        <label>Car Parking Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Parking_Charges__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Parking Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Car_Parking_Charge__c.Project__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Car_Parking_Charge__c.Status__c</field>
                <operation>equals</operation>
                <value>Vacant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Car_Parking_Charge__c</referenceTo>
        <relationshipLabel>Project_Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Parking_Type__c</fullName>
        <label>Car Parking Type</label>
        <picklist>
            <picklistValues>
                <fullName>Small Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carpet_Area__c</fullName>
        <label>Carpet Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chargeable_Area__c</fullName>
        <label>Chargeable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clearing_Date__c</fullName>
        <label>Clearing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>TowerName__r.Zone_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConDeedDttm__c</fullName>
        <label>Date of Conyenance Deed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>1BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4BHK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction__c</fullName>
        <label>Construction</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <label>Settle Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Settle_date__c</fullName>
        <label>Current Settle date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Marketable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Pay_Plan_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Pay Plan Header</label>
        <referenceTo>Customer_Pay_Plan_Header__c</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project_Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customers</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project_Units</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Aggrement__c</fullName>
        <label>Date of Aggrement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DelFlag__c</fullName>
        <label>DelFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Flag__c</fullName>
        <label>Delete Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delimeter__c</fullName>
        <label>Delimeter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount1_Per_Sq_Ft__c</fullName>
        <label>Discount1 Per Sq.Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount1_Type__c</fullName>
        <label>Discount1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount2_Per_Sq_Ft__c</fullName>
        <label>Discount2 Per Sq.Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount2_Type__c</fullName>
        <label>Discount2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount3_Per_Sq_Ft__c</fullName>
        <label>Discount3 Per Sq.Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount3_Type__c</fullName>
        <label>Discount3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount8_Description__c</fullName>
        <label>Discount8 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount9_Description__c</fullName>
        <label>Discount9 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_Facing_as_per_Vasstu__c</fullName>
        <label>Door Facing as per Vasstu</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North/West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South/West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dry_Balcony__c</fullName>
        <label>Dry Balcony</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Efficiency__c</fullName>
        <label>Efficiency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enclosed_Balcony__c</fullName>
        <label>Enclosed Balcony</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclusive_Area__c</fullName>
        <formula>Balcony__c + Terrace_Area__c + Dry_Balcony__c + Enclosed_Balcony__c + Mezzanine__c + Passage__c + Balcony_Carpet_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclusive Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor1__c</fullName>
        <label>Floor1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Plan_Type__c</fullName>
        <label>Floor Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floor_Rise__c</fullName>
        <label>Floor Rise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floor_Stacking__c</fullName>
        <label>Floor Stacking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gallery_Type__c</fullName>
        <label>Gallery Type</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Unit_of_Measurement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Unit of Measurement</label>
        <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISToBeLeased__c</fullName>
        <label>ISToBeLeased</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Amenitites__c</fullName>
        <label>Inside Amenitites</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intrest__c</fullName>
        <label>Intrest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <label>Lease Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Legal_Entity__c</referenceTo>
        <relationshipLabel>Project_Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Tag__c</fullName>
        <label>Location Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MVAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mezzanine__c</fullName>
        <label>Mezzanine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mortgaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mortgaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyID__c</fullName>
        <externalId>true</externalId>
        <label>MyID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Financial_Institution__c</fullName>
        <label>Name of the Financial Institution</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Code__c</fullName>
        <label>Old Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLC1__c</fullName>
        <label>PLC1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLC2__c</fullName>
        <label>PLC2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLC3__c</fullName>
        <label>PLC3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLC_Total__c</fullName>
        <formula>CASE(TEXT(S_View1__c),&apos;Garden View&apos;,Project__r.S_View1_PLC__c,
&apos;Park View&apos;, Project__r.S_View2_PLC__c,
&apos;Sea View&apos;, Project__r.S_View3_PLC__c,0)
+
CASE(TEXT(S_View_2__c),&apos;Garden View&apos;,Project__r.S_View1_PLC__c,
&apos;Park View&apos;, Project__r.S_View2_PLC__c,
&apos;Sea View&apos;, Project__r.S_View3_PLC__c,0)
+
CASE(TEXT(S_View_3__c),&apos;Garden View&apos;,Project__r.S_View1_PLC__c,
&apos;Park View&apos;, Project__r.S_View2_PLC__c,
&apos;Sea View&apos;, Project__r.S_View3_PLC__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLC Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Param1__c</fullName>
        <label>Param1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param2__c</fullName>
        <label>Param2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param3__c</fullName>
        <label>Param3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passage__c</fullName>
        <label>Passage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plot_Area_SQYD__c</fullName>
        <label>Plot Area(SQYD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Amount__c</fullName>
        <label>Previous Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project_Units (Previous Owner)</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_settle_date__c</fullName>
        <label>Previous settle date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Print_Call_Notice_Date__c</fullName>
        <label>Print Call Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Print_Call_Notice_Unique__c</fullName>
        <label>Print Call Notice Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Area Type</label>
        <referenceTo>Project_Area_Type__c</referenceTo>
        <relationshipLabel>Project_Units</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>TowerName__r.ProjectName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Unit_Type__c.RDS_Project__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit_Type__c</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>RDS_Project_Unit_Type__r.RDS_Code__c+&apos;&apos;+RDS_Project_Unit_Type__r.RDS_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Project_Unit_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit Type</label>
        <referenceTo>Project_Unit_Type__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RDS_UnitNo__c</fullName>
        <label>UnitNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_CRM_returns_to_sales__c</fullName>
        <label>Reason For CRM returns to sales</label>
        <picklist>
            <picklistValues>
                <fullName>Physical Document Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reserved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_View1__c</fullName>
        <label>View1</label>
        <picklist>
            <picklistValues>
                <fullName>Garden View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKC View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park View</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_View_2__c</fullName>
        <label>View 2</label>
        <picklist>
            <picklistValues>
                <fullName>Garden View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea Link View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea View</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_View_3__c</fullName>
        <label>View 3</label>
        <picklist>
            <picklistValues>
                <fullName>Garden View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea Link View</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Settle_remarks__c</fullName>
        <label>Settle remarks</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sharing_ProjectName__c</fullName>
        <label>Sharing_ProjectName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Open_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Single- Dependent (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_car_park_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Single - Independent (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Puzzle (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome Call Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Returned To Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tandem_Open_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stack (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tandem_car_park_Earmarked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tandem Covered (Earmarked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxtation_type__c</fullName>
        <label>Taxtation type</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Condition__c</fullName>
        <label>Term &amp; Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Terrace_Area__c</fullName>
        <label>Terrace Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Global_Unit_Of_Measurement__c</fullName>
        <label>Text Global Unit Of Measurement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Unit_Area_Type__c</fullName>
        <label>Text Unit Area Type</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Interest_Till_date__c</fullName>
        <label>Total Interest Till date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TowerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TowerName</label>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Project_Units</relationshipLabel>
        <relationshipName>Project_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-marketable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underdiscussion-Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underdiscussion-Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>